--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Str": "server=.;database=PROJECT_DB2;Trusted_Connection=true"
+    "Str": "server=LAPTOP-70RN3TF4\\SQLEXPRESS;database=PROJECT_DB2;Trusted_Connection=true"
 
   },
   "AppSettings": {
